# meandric-systems

./: .gitignore  README.md  pyproject.toml
examples/: demo.py
notes/: meandric_systems.tex
src/meandric/: __init__.py  core.py  elements.py  length.py  plot.py
tests/: test_length.py  test_meandric.py
